--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "homebridge-motion-switch-with-accessoryinformation",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "Motion Switch plugin for homebridge",
-  "license": "ISC",
-  "keywords": [
-    "homebridge-plugin"
-  ],
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/dieteroo/homebridge-motion-switch-with-accessoryinformation.git"
   },
+  "keywords": [
+    "homebridge-plugin"
+  ],
+  "author": "dieteroo",
+  "license": "ISC",
   "bugs": {
-    "url": "http://github.com/dieteroo/homebridge-motion-switch-with-accessoryinformation/issues"
+    "url": "https://github.com/dieteroo/homebridge-motion-switch-with-accessoryinformation/issues"
   },
   "engines": {
     "node": ">=0.12.0",
     "homebridge": ">=0.2.0"
-  }
+  },
+  "homepage": "https://github.com/dieteroo/homebridge-motion-switch-with-accessoryinformation#readme"
 }
